--- a/styles.css
+++ b/styles.css
@@ -22,9 +22,10 @@ body {
     font-family: 'Inter', sans-serif;
     /* display: grid;
     place-items: center; */
-    padding-top: 5rem;
-    padding-left: 8rem;
-    padding-right: 8rem;
+    margin-top: 5rem;
+    margin-left: 8rem;
+    margin-right: 8rem;
+    margin-bottom: 8rem;
 }
 
 .container {
@@ -130,3 +131,56 @@ body {
     letter-spacing: .2rem;
     font-weight: 700;
 }
+
+
+.more-info {
+    display: flex;
+    margin-top: 3rem;
+    gap: 5.5rem;
+}
+
+
+.more-info--cont {
+    display: flex;
+    flex-direction: row;
+    gap: 1.5rem;
+}
+
+.info-img{
+    width: 120px;
+    height: 120px;
+}
+
+.info-img img {
+    width: 100%;
+    height: 100%;
+    display: block;
+}
+
+.info-cont {
+    display: flex;
+    overflow: hidden;
+    flex-direction: column;
+    gap: .5rem;
+}
+
+.number-tag {
+    color: var(--neutral-2);
+    font-size: 2rem;
+    font-weight: 600;
+
+}
+
+.description-tag {
+    font-size: 1rem;
+    font-weight: 700;
+}
+
+
+.info-cont p {
+    color: var(--neutral-3);
+    line-height: 1.3rem;
+    font-size: .8rem;
+}
+
+
