--- a/styles.css
+++ b/styles.css
@@ -196,8 +196,57 @@ body {
     font-size: .8rem;
 }
 
-@media (max-width: 767px) {
-    
+.phone-nav-tag {
+    display: none;
+}
+
+@media (max-width: 1000px) {
+    .phone-nav-tag {
+        display: block;
+    }
+    .nav-tags {
+        display: none;
+    }
+    .main-content {
+        display: flex;
+        flex-direction: column;
+        gap: 4rem;
+    }
+    .article {
+        flex-direction: column;
+        gap: 1rem;
+    }
+    .article-info {
+        gap: 2rem;
+    }
+    .news-article {
+        font-size: 2rem;
+    }
+    .news-content {
+        margin-top: 2.2rem;
+    }
+    .h2-line {
+        margin-top: .3rem;
+    }
+    .news-content > span {
+        font-size: 1rem;
+    }
+    body {
+        min-height: 100vh;
+        font-family: 'Inter', sans-serif;
+        /* display: grid;
+        place-items: center; */
+        margin: 1rem;
+    }
+    .more-info {
+        flex-direction: column;
+        gap: 2rem;
+    }
+    .info-img img {
+        width: 5.5rem;
+        height: 7rem;
+        display: block;
+    }
 }
 
 @keyframes colorChange {
